rewrote Destroyer without creating new array

--- a/Basic_CC/Basic_CC.csproj
+++ b/Basic_CC/Basic_CC.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BasicMethods.cs" />
     <Compile Include="Test.cs" />
